// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render тест: должен вернуть корректный элемент 1`] = `
<div
  className="SaleServiceButton SaleServiceButton_type_turbo SaleServiceButton_active SaleServiceButton_disabled SaleServiceButton_deactivationNotAllowed SaleServiceButton_withText SaleServiceButton_bordered"
  onClick={[Function]}
>
  Icon
  text
</div>
`;

exports[`renderIcon тесты должен вернуть корректный элемент 1`] = `
<div
  className="SaleServiceButton__iconWrapper"
>
  <IconSvg
    className="SaleServiceButton__icon"
    id="service-turbo"
    size="24"
  />
</div>
`;

exports[`renderIcon тесты должен вернуть элемент с SaleServiceButton__indicatorWrapper 1`] = `
<div
  className="SaleServiceButton__indicatorWrapper"
>
  <div
    className="SaleServiceButton__indicator"
  >
    10
  </div>
  <div
    className="SaleServiceButton__iconWrapper"
  >
    <IconSvg
      className="SaleServiceButton__icon"
      id="service-turbo"
      size="24"
    />
  </div>
</div>
`;

exports[`renderIcon тесты должен вернуть элемент со спиннером, если isFetching = true 1`] = `
<Spinner
  className="SaleServiceButton__spinner"
  color="blue"
  size="xs"
/>
`;
